Server side message objects now represent messages sent between client and server. Event handling implemented.

--- a/static/larch.css
+++ b/static/larch.css
@@ -1,17 +1,2 @@
-.larch_controls {
-}
-
-.larch_control {
-}
-
-
-
-
-
-.prim_int {
-	color: #800080;
-}
-
-.punc {
-	color: #008080;
+.__lch_event_elem {
 }
