Simplified the DOM manipulation that is required, significantly improving speed.

--- a/static/larch.css
+++ b/static/larch.css
@@ -1,3 +1,18 @@
+.__lch_seg_placeholder {
+    display: none;
+    visibility: hidden;
+}
+
+.__lch_seg_inline_begin {
+    display: none;
+    visibility: hidden;
+}
+
+.__lch_seg_inline_end {
+    display: none;
+    visibility: hidden;
+}
+
 .__lch_event_elem {
 }
 
