Modified web_document system so that the delimiter elements are always created. Fixed iteration issue in larch.js. Removed segments have an __lch_next property set that allows iteration when they are re-inserted into the DOM.

--- a/static/larch.css
+++ b/static/larch.css
@@ -3,12 +3,12 @@
     visibility: hidden;
 }
 
-.__lch_seg_inline_begin {
+.__lch_seg_begin {
     display: none;
     visibility: hidden;
 }
 
-.__lch_seg_inline_end {
+.__lch_seg_end {
     display: none;
     visibility: hidden;
 }
