--- a/static/codemirror/lib/codemirror.css
+++ b/static/codemirror/lib/codemirror.css
@@ -1,15 +1,21 @@
 .CodeMirror {
   line-height: 1em;
   font-family: monospace;
+
+    height: auto;
+    border: 1px solid #ddd;
 }
 
 .CodeMirror-scroll {
   overflow: auto;
-  height: 300px;
+  /*height: 300px;*/
   /* This is needed to prevent an IE[67] bug where the scrolled content
      is visible outside of the scrolling box. */
   position: relative;
   outline: none;
+
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 .CodeMirror-gutter {
