--- a/static/worksheet.css
+++ b/static/worksheet.css
@@ -1,10 +1,14 @@
 
 .worksheet_menu_bar {
     width: 10em;
-    margin: 0 10em;
+    margin: 2em 10em;
 }
 
-.worksheet_code_block {
+.worksheet_block {
     margin: 0.5em 0;
+}
+
+.worksheet_code_container {
+    padding: 0.1em 0;
 }
 
