Initialiser function provided to DynamicDocumentService replaced with abstact method in same class. New ProjectionService class subclasses DynamicDocumentService and initialises an IncrementalView. Replaces functionality provided by larch_app. Location resolution moved from Subject into ProjectionService. Service object accessible from DynamicDocument, IncrementalView and FragmentView through properties. Button control references jQuery UI bridge. Worksheet text blocks respond to edit events. An exception is now raised when location resolution fails. Servers refactored to account for this. Style improvements.

--- a/static/larch.css
+++ b/static/larch.css
@@ -43,3 +43,40 @@
     font-size: 11px;
 }
 
+
+
+p {
+    color: #404040;
+    font-family: "Oxygen", sans-serif;
+}
+
+h1 {
+    font-family: "Garamond", serif;
+    color: #808080;
+}
+
+h2 {
+    font-family: "Garamond", serif;
+    color: #787878;
+}
+
+h3 {
+    font-family: "Garamond", serif;
+    color: #707070;
+}
+
+h4 {
+    font-family: "Garamond", serif;
+    color: #686868;
+}
+
+h5 {
+    font-family: "Garamond", serif;
+    color: #606060;
+}
+
+h6 {
+    font-family: "Garamond", serif;
+    color: #585858;
+}
+
