--- a/static/worksheet.css
+++ b/static/worksheet.css
@@ -6,6 +6,9 @@
 
 .worksheet_block {
     margin: 0.5em 0;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .worksheet_code_container {
