--- a/static/larch_app.css
+++ b/static/larch_app.css
@@ -58,6 +58,24 @@
     width: 10em;
 }
 
+.larch_app_create_gui {
+    width: 100%;
+    margin: 5px 25px;
+    padding: 10px 10px;
+    border: 1px solid #6095ff;
+    border-radius: 5px;
+    background: #eff8ff;
+}
+
+.larch_app_doc_name_in_use {
+    margin: 5px 25px;
+    padding: 10px 10px;
+    border: 1px solid #ff6363;
+    border-radius: 5px;
+    background: #fff0f0;
+    font-family: "Garamond", "Georgia", serif;
+}
+
 h1.larch_app_title {
     text-align: center;
     padding: 0.5em 0;
