Python code execution now displays the contents of the stdout and stderr streams.

--- a/static/python.css
+++ b/static/python.css
@@ -1,3 +1,46 @@
+.python_stdout_block {
+    border: 1px solid #00c000;
+    border-radius: 5px;
+    background: #efffef;
+    padding: 5px;
+    margin: 1px;
+}
+
+.python_stdout_name {
+    font-size: 0.75em;
+    font-variant: small-caps;
+    color: #00a000;
+    margin: 0;
+}
+
+.python_stdout_text {
+    margin: 2px 5px;
+    color: #008000;
+}
+
+
+.python_stderr_block {
+    border: 1px solid #c00000;
+    border-radius: 5px;
+    background: #ffefef;
+    padding: 5px;
+    margin: 2px 0;
+}
+
+.python_stderr_name {
+    font-size: 0.75em;
+    font-variant: small-caps;
+    color: #a00000;
+    margin: 0;
+}
+
+.python_stderr_text {
+    margin: 2px 5px;
+    color: #800000;
+}
+
+
+
 .pyprim_punctuation {
     font-family: "Tahoma", "Geneva", sans-serif;
     color : #0000ff;
