Further work on project system.

--- a/static/project.css
+++ b/static/project.css
@@ -11,6 +11,9 @@
     margin-left: 1.5em;
 }
 
+.project_container_header {
+}
+
 .project_index_text {
     font-family: "Palatino linotype", "Book Antiqua", serif;
     font-weight: lighter;
