--- a/static/larch.css
+++ b/static/larch.css
@@ -89,6 +89,15 @@ h6 {
 }
 
 
+.gui_box {
+    width: 100%;
+    margin: 5px 25px;
+    padding: 10px 10px;
+    border: 1px solid #6095ff;
+    border-radius: 5px;
+    background: #eff8ff;
+}
+
 .gui_label {
     font-family: "Palatino linotype", "Book Antiqua", serif;
     padding: 0 1em;
