New subject system: instead of building a trail of subjects, each pointing to the parent, subjects now accumulate in steps, with name resolution being the responsibility of the model objects.

--- a/static/larch.css
+++ b/static/larch.css
@@ -145,3 +145,11 @@ h6 {
     font-size: 0.75em;
     color: #a00000;
 }
+
+
+.notes_text {
+    font-family: "Open Sans", sans-serif;
+    font-size: 0.8em;
+    color: #505050;
+    font-style: italic;
+}
