--- a/static/worksheet.css
+++ b/static/worksheet.css
@@ -45,8 +45,71 @@
     padding: 5px;
 }
 
-.worksheet_code_container {
-    padding: 0.1em 0;
+.worksheet_code_block {
+    margin: 0.5em 0;
+    border: 1px solid #c9c9d1;
+    border-radius: 5px;
+}
+
+.worksheet_python_code_header {
+    padding: 5px;
+    background: #e1ebe1;
+    font-family: "Open Sans", sans-serif;
+}
+
+.worksheet_python_code_container {
+    margin: 3px 0 3px 0;
+    border-left: 2px solid #008000;
+    border-right: 2px solid #008000;
+    padding: 0 2px 0 2px;
+}
+
+.worksheet_js_code_header {
+    padding: 5px;
+    background: #ebe1e1;
+    font-family: "Open Sans", sans-serif;
+}
+
+.worksheet_js_code_container {
+    margin: 3px 0 3px 0;
+    border-left: 2px solid #800000;
+    border-right: 2px solid #800000;
+    padding: 0 2px 0 2px;
+}
+
+.worksheet_css_code_header {
+    padding: 5px;
+    background: #e1e1eb;
+    font-family: "Open Sans", sans-serif;
+}
+
+.worksheet_css_code_container {
+    margin: 3px 0 3px 0;
+    border-left: 2px solid #000080;
+    border-right: 2px solid #000080;
+    padding: 0 2px 0 2px;
+}
+
+.worksheet_html_code_header {
+    padding: 5px;
+    background: #e1e1eb;
+    font-family: "Open Sans", sans-serif;
+}
+
+.worksheet_code_block_body {
+    padding: 3px;
+    border-top: 1px solid #b0b0b5;
+}
+
+.worksheet_result_container {
+    border-left: 2px solid #99b3cc;
+    border-right: 2px solid #99b3cc;
+    padding: 0 2px 0 2px;
+    margin: 3px 0 3px 0;
+}
+
+.worksheet_src_language_select_table {
+    float: right;
 }
 
 .worksheet_documentation {
