Improved robustness of larch.__getSegmentIDForEvent function in larch.js. Minor fixes. Updated copyright notices.

--- a/static/console.css
+++ b/static/console.css
@@ -1,3 +1,9 @@
+/*
+-*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************
+*/
+
 .python_console_header {
     font-family: "Garamond", "Georgia", serif;
     border: 1px solid #68805f;
