--- a/static/larch.css
+++ b/static/larch.css
@@ -1,3 +1,9 @@
+/*
+-*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************
+*/
+
 .__lch_seg_placeholder {
     display: none;
     visibility: hidden;
