--- a/static/larch_app.css
+++ b/static/larch_app.css
@@ -1,3 +1,9 @@
+/*
+-*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************
+*/
+
 .larch_app_enclosure {
     width: 1280px;
     margin: 0 auto;
