--- a/static/python.css
+++ b/static/python.css
@@ -1,4 +1,10 @@
 /*
+-*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************
+*/
+
+/*
 Styles for text written to stdout and stderr
 block style (container), name style (title), and text style (content)
 */
