--- a/static/worksheet.css
+++ b/static/worksheet.css
@@ -1,4 +1,8 @@
-
+/*
+-*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************
+*/
 .worksheet_header {
     margin: 1em 0;
 }
