--- a/static/project.css
+++ b/static/project.css
@@ -1,3 +1,9 @@
+/*
+-*************************
+-* This source code is (C)copyright Geoffrey French 2011-2013.
+-*************************
+*/
+
 .project_index {
 }
 
