--- a/static/codemirror-3.14/lib/codemirror.css
+++ b/static/codemirror-3.14/lib/codemirror.css
@@ -105,7 +105,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
   line-height: 1;
   position: relative;
   overflow: hidden;
-  background: white;
+  /*background: white;*/
+  background-image: url('code_background.png');
+
   color: black;
 }
 
