code_background.png renamed to speckle.png and moved to the root of the static directory, so that it can be used for other things besides code. Added drop shadows to code blocks. Fixed a bug in the ProjectRoot __present__ method. Added a header bar.

--- a/static/codemirror-3.14/lib/codemirror.css
+++ b/static/codemirror-3.14/lib/codemirror.css
@@ -106,7 +106,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
   position: relative;
   overflow: hidden;
   /*background: white;*/
-  background-image: url('code_background.png');
+  background-image: url('/static/speckle.png');
 
   color: black;
 }
