--- a/static/larch.css
+++ b/static/larch.css
@@ -28,9 +28,7 @@
 
 .dropdown_expander_header {
     font-family: "Tahoma", "Geneva", sans-serif;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #808080;
+    border: 1px solid #808080;
     background: #f0f0f0;
     border-radius: 5px;
     padding: 3px;
