--- a/static/python.css
+++ b/static/python.css
@@ -108,9 +108,7 @@ Styles for presenting Python values
 /* Error box for exceptions */
 .error_box {
     font-family: "Tahoma", "Geneva", sans-serif;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #ff0000;
+    border: 1px solid #ff0000;
     background: #ffe0e0;
     border-radius: 5px;
     padding: 3px;
@@ -145,9 +143,7 @@ Styles for presenting Python values
 
 .pythonobject {
     font-family: "Tahoma", "Geneva", sans-serif;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #808080;
+    border-width: 1px solid #808080;
     border-radius: 5px;
     padding: 3px;
 }
