--- a/static/worksheet.css
+++ b/static/worksheet.css
@@ -37,7 +37,6 @@
     border: 1px solid #509050;
     border-radius: 7px;
     background: #f6fff6;
-    margin: 0.5em 5em;
     width: 30em;
     padding: 3px 10px;
 }
@@ -50,7 +49,7 @@
 }
 
 .worksheet_code_block {
-    margin: 0.5em 0em 1.0em 0em;
+    margin: 0.5em 0 1.0em 0;
     border: 1px solid #c9c9d1;
     border-radius: 5px;
     box-shadow: 0 7px 5px #dcdcdc;
