Code block background image now set in worksheet CSS rather than in CodeMirror CSS. Improved robustness of highlighting and focus display using the !importand CSS modifier. More errors displayed using larch.showAlert, rather than using noty directly. larch.showAlert() now accepts a function that creates the content. This way, event handlers remain intact.

--- a/static/larch.css
+++ b/static/larch.css
@@ -171,13 +171,14 @@ h6 {
     font-family: monospace;
 }
 
-.exception_in_noty {
+.exception_in_alert {
     text-align: left;
 }
 
 .segment_highlight {
-    border: 1px solid #c0c000;
-    background: #e8e8ff;
+    border: 1px solid #c0c000 !important;
+    background: #e8e8ff !important;
+    outline: 2px solid #c04040 !important;
 }
 
 .exception_during_presentation {
