--- a/static/larch_ui.css
+++ b/static/larch_ui.css
@@ -1,7 +1,7 @@
 .larch_ui_focusable {
-    margin-bottom: 0.8em;
+    margin-bottom: 0.8em !important;
 }
 
 .larch_ui_focused {
-    box-shadow: -1px 6px 21px #6c7884;
+    box-shadow: -1px 6px 21px #6c7884 !important;
 }
