--- a/static/worksheet.css
+++ b/static/worksheet.css
@@ -37,7 +37,7 @@
 }
 
 .worksheet_richtext {
-  background-image: url('/static/paper.png');
+    background-image: url('/static/paper.png');
 }
 
 .worksheet_code_block {
@@ -51,6 +51,10 @@
     padding: 5px;
     background: #e1ebe1;
     font-family: "Open Sans", sans-serif;
+}
+
+.worksheet_code_container {
+    background-image: url('/static/speckle.png');
 }
 
 .worksheet_python_code_container {
