Python functions are now displayed with their doc-strings. Html class now has a static escape_str method for escaping strings to HTML format. Worksheet header removed; all functionaltiy now in menu bar. Refactored Larch command bar in client side code; now more reliable. Command bar can be invoked from menu bar.

--- a/static/larch_app_frame.css
+++ b/static/larch_app_frame.css
@@ -26,11 +26,15 @@ td.__larch_app_frame_menu_bar {
     margin: 0 0.5em 0 0.5em;
 }
 
-.__larch_esc_notification {
+.__larch_cmd_bar_right {
     float: right;
 }
 
 body {
     margin: 0;
+}
+
+.__larch_app_cmd_bar_button {
+    margin: 0 0 0 0.5em;
 }
 
