text_entry.text_entry function now takes parameters for size (characters) or width (CSS style). Renamed gui_box CSS style to tool_box. Added markdown support to IPynb filter. IPython notebooks can now be imported - either by upload or from URL - from the Larch application main page.

--- a/static/larch_app.css
+++ b/static/larch_app.css
@@ -77,9 +77,12 @@
     margin: 3em 0;
 }
 
-.larch_app_menu {
+.larch_app_controls_row {
     margin: 0.5em 0;
-    width: 10em;
+}
+
+.larch_app_control {
+    margin: 0 0.25em;
 }
 
 .larch_app_doc_name_in_use {
