--- a/static/larch.css
+++ b/static/larch.css
@@ -97,7 +97,7 @@ body {
     font-family: "Oxygen", "Tahoma", "Geneva", sans-serif;
 }
 
-.gui_box {
+.tool_box {
     width: 100%;
     margin: 5px 25px;
     padding: 10px 10px;
