--- a/static/larch.css
+++ b/static/larch.css
@@ -26,40 +26,32 @@
 }
 
 .larch_liveliness_indicator {
+    font-family: sans-serif;
+    font-weight: bold;
+    padding: 3px 6px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px #b0b0b0;
+    color: #505050;
+    border: 1px solid #808080;
+    background: #d0d0d0;
+}
+
+.larch_liveliness_indicator:hover {
+    color: #707070;
+    border: 1px solid #a0a0a0;
+    background: #f0f0f0;
 }
 
 .larch_liveliness_on {
-    font-family: sans-serif;
-    font-weight: bold;
-    padding: 3px 6px;
     color: #106010;
     border: 1px solid #00a000;
-    border-radius: 5px;
     background: #e0ffe0;
-    box-shadow: 0px 2px 2px #b0b0b0;
 }
 
 .larch_liveliness_on:hover {
-    color: #004000;
-    border: 1px solid #008000;
-    background: #d0f0d0;
-}
-
-.larch_liveliness_off {
-    font-family: sans-serif;
-    font-weight: bold;
-    padding: 3px 6px;
-    color: #606060;
-    border: 1px solid #c0c0c0;
-    border-radius: 5px;
-    background: #e0e0e0;
-    box-shadow: 0px 2px 2px #b0b0b0;
-}
-
-.larch_liveliness_off:hover {
-    color: #404040;
-    border: 1px solid #a0a0a0;
-    background: #c0c0c0;
+    color: #108010;
+    border: 1px solid #00c000;
+    background: #f0fff0;
 }
 
 
