Fixed bug in DynamicSegment; get_shutdown_scripts() method returned initialisation scripts. Merged JSInitVal and JSShutdownEval into one class, that manages all initialisation and shutdown scripts for a child pres. Improved error reporting in larch.js. Rich text that is editable with ckEditor can optionally remain static until a button or alt-click are used.

--- a/static/larch/larch_ui.css
+++ b/static/larch/larch_ui.css
@@ -5,3 +5,16 @@
 .larch_ui_focused {
     box-shadow: -1px 6px 21px #6c7884 !important;
 }
+
+
+.__larch_ui_ckeditor_edit_popover {
+    position: relative;
+    float: right;
+    background: rgba(0,0,0,0.7);
+    border: 1px solid rgba(0.5, 0.5, 0.5, 0.7);
+    border-radius: 5px;
+    box-shadow: 0 3px 5px #bbb;
+    padding: 3px 10px;
+
+    color: #fff;
+}
