--- a/static/larch/larch_app.css
+++ b/static/larch/larch_app.css
@@ -132,4 +132,30 @@ h1.larch_app_title {
     color: #4f9b3d;
 }
 
+.larch_app_menu {
+    list-style: none;
+    height: 45px;
+    background: #f8f8f8;
+    padding: 0 20px;
+}
+
+.larch_app_menu li {
+    float: right;
+    border-left: 1px solid #ffffff;
+    border-right: 1px solid #e0e0e0;
+    background: #f0f0f0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: bold;
+}
+
+.larch_app_menu li:hover {
+    background: #e0e0e0;
+}
+
+.larch_app_menu li a {
+    display: block;
+    color: #606060;
+    text-decoration: none;
+    padding: 10px 20px;
+}
 
