Fixed bug that prevented consoles from being accessible. Changed default fonts. Body text is now Roboto, headings and title are Oswald.

--- a/static/larch/console.css
+++ b/static/larch/console.css
@@ -5,7 +5,7 @@
 */
 
 .python_console_header {
-    font-family: "Garamond", "Georgia", serif;
+    font-family: 'Oswald', sans-serif;
     border: 1px solid #68805f;
     border-radius: 5px;
     color: #344030;
