--- a/static/larch/larch.css
+++ b/static/larch/larch.css
@@ -4,7 +4,7 @@
 -*************************
 */
 
-@import url(http://fonts.googleapis.com/css?family=Oswald:300|Roboto);
+@import url(http://fonts.googleapis.com/css?family=Oswald|Roboto);
 
 body {
     color: #404040;
